# deadball-web

./: .gitignore  README.md  deadball_dev.db  run_dev.sh
backend/: .env  .env.example  .gitignore  requirements.txt
backend/app/: db.py  main.py  models.py  schemas.py
backend/deadball_generator/: .gitignore  README.md  generator.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/deadball_generator/assets/templates/: deadball_scorecard.html
backend/deadball_generator/scripts/: build_team_stats.py  fill_scorecard.py  game.py
backend/deadball_generator/src/deadball_generator/: __init__.py  __main__.py  deadball_api.py  generator.py  paths.py  roster_api.py
backend/deadball_generator/src/deadball_generator.egg-info/: SOURCES.txt  requires.txt  top_level.txt
backend/deadball_generator/src/deadball_generator/cli/: build_team_stats.py  fill_scorecard.py  game.py  main.py  teams.py
backend/deadball_generator/src/deadball_generator/scorecards/: fill.py
backend/deadball_generator/src/deadball_generator/stats_fetchers/: team_stats.py
backend/deadball_generator/tests/: test_fill_scorecard.py
backend/deadball_generator/tests/fixtures/: sample_game.csv  sample_template.html
backend/deadball_generator_stub/: __init__.py  cli.py  deadball_api.py  generator.py
docs/: api.md  architecture.md  data-model.md  deadball-web-docs-collection.md  desktop.md  game-flow.md  generator.md  overview.md  roadmap.md
frontend/: index.html  package-lock.json  package.json
scripts/: package-backend.sh
src-tauri/: Cargo.toml  tauri.conf.json
(+14 files in other folders)
